--- a/main.ipynb
+++ b/main.ipynb
@@ -558,7 +558,7 @@
     "    plt.title(f'Influence of training data over {z} for {name}', fontsize=10)\n",
     "    plt.legend()\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(f'./figs/dist/{name}.png')\n",
+    "    plt.savefig(f'./figs/distance/{name}.png')\n",
     "    plt.show()\n",
     "    \n",
     "visualize(fixed_if_knn_5, 'kNN_5')    \n",
